Sample Bank v2.0.0 release fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
-application.message: Hello World
+server.contextPath=/samplebank
+logging.level.org.springframework.web=DEBUG
