--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
